--- a/_posts/2014-03-12-abstract.markdown
+++ b/_posts/2014-03-12-abstract.markdown
@@ -10,3 +10,5 @@ Modern development is highly asynchronous: isn’t it about time iOS developers 
 PromiseKit is not just a [Promises](http://wikipedia.org/wiki/Promise_%28programming%29) implementation, it is also a collection of helper functions that make the typical asynchronous patterns we use in iOS development delightful *too*.
 
 In addition, PromiseKit is designed to be integrated into other [CocoaPods](http://cocoapods.org). If your library has asynchronous operations then consider adding an opt-in subspec that provides Promises for your users. Documentation to help you integrate PromiseKit into your own pods is provided later in this guide.
+
+PromiseKit is available in Objective-C and Swift flavors.
