--- a/_posts/2014-03-01-examples.markdown
+++ b/_posts/2014-03-01-examples.markdown
@@ -31,9 +31,10 @@ Sometimes you have promises that are semi-recoverable. Rather than lump all erro
 
 {% highlight objectivec %}
 self.fetch.then(^(id json){
-    return [CLLocationManager promise].catch(^(NSError *err){
+    return [CLLocationManager promise].catch(^id(NSError *err){
         if (err.code == kCLErrorLocationUnknown)
             return self.chicagoLocation;
+        return err;  // “re-throw”
     });
 }).then(^{
     //…
@@ -41,6 +42,8 @@ self.fetch.then(^(id json){
 {% endhighlight %}
 
 This can be especially important when using `when`/`all` since those methods will immediately reject their promise if any of the promises provided them rejects, often one can recover at least some of the provided promises.
+
+Note that we had to change the above block’s return to `id` so that it could return two different types.
 
 
 ## 3. Cache & Fetch
