Document installing the Swift variant.

--- a/_posts/2014-03-11-install.markdown
+++ b/_posts/2014-03-11-install.markdown
@@ -17,6 +17,11 @@ In your `.m` files:
 #import <PromiseKit.h>
 {% endhighlight %}
 
+In your `.swift` files:
+{% highlight swift %}
+import PromiseKit
+{% endhighlight %}
+
 PromiseKit is modulized; if you only want `PMKPromise` and none of our category additions:
 
 {% highlight ruby %}
@@ -44,3 +49,10 @@ Asking for just the `PromiseKit` pod gives you the 80% most people want, ie. `PM
 If you don’t want to use CocoaPods you can use [CocoaPods Packager](https://github.com/CocoaPods/cocoapods-packager) to generate a static version of PromiseKit and just embed that.
 
 Please update regularly though, currently PromiseKit is updated *twice a week*.
+
+
+## Swift
+
+Currently CocoaPods does not have good Swift support. To use PromiseKit in your Swift project, add all of the `swift` directory to your sources and in your `xcodeproj` drag and drop `PromiseKit.xcodeproj` into your sources. Next configure your project to depend on PromiseKit and to link to it and to embed it into your final app.
+
+Alternatively directly compile all the sources into your sources. If you do this, `Promise` will be available without having to `import PromiseKit` in your `.swift` files.
